Fix position of circular chart inside wrapper and overflow

--- a/app/javascript/app/components/circular-chart/circular-chart-styles.scss
+++ b/app/javascript/app/components/circular-chart/circular-chart-styles.scss
@@ -5,6 +5,11 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
   width: 100%;
 }
 
